--- a/.gitignore
+++ b/.gitignore
@@ -139,11 +139,8 @@ dmypy.json
 
 # End of https://www.gitignore.io/api/python,visualstudiocode
 
-# Config
-Config.py
-
-# VS CODE
-.vscode/
+# config
+config.py
 
 # downloads
 /downloads/*.mp3
